--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "cors": "^2.8.5",
+    "prompt": "^1.0.0",
+    "prompt-password": "^1.2.0",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
