--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-table": "^4.3.1",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.5.2",
+    "react-dropdown": "^1.6.3",
     "react-metismenu": "^1.4.0",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
