--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "react-dom": "^16.5.2",
     "react-dropdown": "^1.6.3",
     "react-metismenu": "^1.4.0",
+    "react-month-picker": "^1.3.8",
+    "react-month-picker-input": "^1.1.6",
+    "react-month-year-picker": "^1.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5",
-    "react-table": "^6.8.6"
+    "react-table": "^6.8.6",
+    "react-year-month-selector": "0.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
