--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "cors": "^2.8.5",
+    "d3": "^5.7.0",
     "prompt": "^1.0.0",
     "prompt-password": "^1.2.0",
     "react": "^16.5.2",
+    "react-bar-chart": "^0.1.2",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-table": "^4.3.1",
+    "react-d3-components": "^0.9.1",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.5.2",
     "react-dropdown": "^1.6.3",
+    "react-linechart": "^1.1.12",
     "react-metismenu": "^1.4.0",
+    "react-minimal-pie-chart": "^3.3.0",
     "react-month-picker": "^1.3.8",
     "react-month-picker-input": "^1.1.6",
     "react-month-year-picker": "^1.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5",
+    "react-rt-chart": "^2.0.0",
+    "react-scripts": "^2.1.2",
     "react-table": "^6.8.6",
     "react-year-month-selector": "0.0.8"
   },
