--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "cors": "^2.8.5",
     "d3": "^5.7.0",
+    "node-sass": "^4.11.0",
     "prompt": "^1.0.0",
     "prompt-password": "^1.2.0",
     "react": "^16.5.2",
@@ -16,6 +17,7 @@
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.5.2",
     "react-dropdown": "^1.6.3",
+    "react-easy-chart": "^1.0.0",
     "react-linechart": "^1.1.12",
     "react-metismenu": "^1.4.0",
     "react-minimal-pie-chart": "^3.3.0",
