--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "node-sass": "^4.11.0",
     "prompt": "^1.0.0",
     "prompt-password": "^1.2.0",
-    "react": "^16.5.2",
+    "react": "^15.6.2",
     "react-bar-chart": "^0.1.2",
     "react-bootstrap": "^0.32.4",
     "react-bootstrap-table": "^4.3.1",
     "react-d3-components": "^0.9.1",
     "react-datepicker": "^2.0.0",
-    "react-dom": "^16.5.2",
+    "react-dom": "^15.6.2",
     "react-dropdown": "^1.6.3",
     "react-easy-chart": "^1.0.0",
     "react-linechart": "^1.1.12",
@@ -27,9 +27,10 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-rt-chart": "^2.0.0",
-    "react-scripts": "^2.1.2",
+    "react-scripts": "^2.1.5",
     "react-table": "^6.8.6",
-    "react-year-month-selector": "0.0.8"
+    "react-year-month-selector": "0.0.8",
+    "sinon": "^7.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,5 +46,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-15": "^1.3.0",
+    "jest-extended": "^0.11.1",
+    "react-test-renderer": "^15.6.2",
+    "react-unit": "^3.0.3"
+  }
 }
